# oravys-detector

./: LICENSE  README.md  pyproject.toml
oravys/: __init__.py  cli.py  detector.py  result.py
oravys.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
oravys/engines/: __init__.py  local_dsp.py
tests/: test_detector.py
