[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oravys"
version = "0.2.0"
description = "ORAVYS - Voice deepfake detection SDK. Calls the hosted ORAVYS API (3000+ forensic engines) by default. Includes an experimental local DSP probe (11 engines, high false-negative rate, not for production). Source-available under BUSL-1.1; auto-converts to Apache-2.0 on 2029-05-11. ORAVYS is a trademark of Oravys Inc."
readme = "README.md"
license = "BUSL-1.1"
requires-python = ">=3.9"
authors = [
    {name = "Eliot Cohen Bacrie", email = "contact@oravys.com"},
]
maintainers = [
    {name = "Oravys Inc.", email = "contact@oravys.com"},
]
keywords = [
    "deepfake",
    "voice",
    "detection",
    "forensic",
    "audio",
    "AI",
    "synthetic",
    "speech",
    "biometric",
    "anti-fraud",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
local = [
    "scipy>=1.9.0",
    "librosa>=0.10.0",
]
all = [
    "scipy>=1.9.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
]

[project.scripts]
oravys = "oravys.cli:main"

[project.urls]
Homepage = "https://oravys.com"
Documentation = "https://docs.oravys.com"
Repository = "https://github.com/oravys/oravys-detector"
Issues = "https://github.com/oravys/oravys-detector/issues"
"API Console" = "https://app.oravys.com"

[tool.setuptools.packages.find]
include = ["oravys*"]
